<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionAddTask"
        android:icon="@drawable/ic_add"
        android:title="@string/actionAddTask"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionOptions"
        android:icon="@drawable/ic_more"
        android:title="@string/actionOptions"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_delete_done_items"
                android:title="@string/actionDeleteDoneTasks" />
            <item
                android:id="@+id/action_group_editor"
                android:title="@string/actionGroupManagement" />
            <item
                android:id="@+id/action_settings"
                android:title="@string/actionSettings" />
        </menu>
    </item>

</menu>