<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout style="@style/Activity.Main.ListCard.Style">

        <TextView
            android:id="@+id/list_row_label"
            style="@style/Activity.Main.ListItem.Big.Style"
            android:text="@string/applicationName" />

        <TextView
            android:id="@+id/list_row_date_label"
            style="@style/Activity.Main.ListItem.Small.Style"
            android:layout_below="@+id/list_row_label"
            android:text="@string/labelReminderNotSet" />

        <View
            android:id="@+id/listItemSeparator"
            style="@style/Activity.Main.ListItem.Separator.Style"
            android:layout_below="@+id/list_row_date_label" />

        <LinearLayout
            android:id="@+id/task_list_item_commands"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listItemSeparator"
            android:layout_alignRight="@+id/listItemSeparator"
            android:layout_below="@+id/listItemSeparator">

            <Button
                android:id="@+id/button_task_edit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/labelEdit"
                android:textColor="@color/cyan" />

            <Button
                android:id="@+id/button_task_completed"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/labelMarkCompleted"
                android:textColor="@color/cyan" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/listItemShadowHeight"
            android:layout_below="@+id/task_list_item_commands"
            android:layout_marginLeft="@dimen/listItemShadowSideMargin"
            android:layout_marginRight="@dimen/listItemShadowSideMargin"
            android:background="@color/shadow" />

    </RelativeLayout>
</android.support.v7.widget.CardView>