<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout style="@style/Activity.Main.ListCard.Style">

        <TextView
            android:id="@+id/groupTitleTextView"
            style="@style/Activity.Main.ListItem.Big.Style"
            android:text="@string/applicationName" />

        <View
            android:id="@+id/listItemSeparator"
            style="@style/Activity.Main.ListItem.Separator.Style"
            android:layout_below="@+id/groupTitleTextView" />

        <LinearLayout
            android:id="@+id/groupListItemLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listItemSeparator"
            android:layout_alignRight="@+id/listItemSeparator"
            android:layout_below="@+id/listItemSeparator">

            <Button
                android:id="@+id/editGroupButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/labelEdit"
                android:textColor="@color/cyan" />

            <Button
                android:id="@+id/remarkGroupButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/labelMarkGroupForDeleting"
                android:textColor="@color/cyan" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>